Issue: Improved visibility of pikcup icon on map

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -37,5 +37,5 @@
 }
 
 .marker-label--p {
-  background-color: cyan;
+  background-color: orange;
 }
